# aws-nitro-enclaves-acm

./: .gitignore  Cargo.toml  Dockerfile  README.md  THIRD-PARTY-LICENSES  ci_entrypoint.sh  evault-build  run-nitro-enclaves-acm-tests
cdk/: .gitignore  README.md  acmne-cli  setup-tool  tsconfig.json
cdk/src/assets/user-data-scripts/: private-cert-conf.sh
cdk/src/assets/user-data-scripts/AL2/: apache-conf.sh  nginx-conf.sh
cdk/src/assets/user-data-scripts/AL2023/: apache-conf.sh  nginx-conf.sh
cdk/src/config/: config-validator.ts  default-config.ts  types.ts
cdk/src/lib/: certificate-stack.ts  instance-stack.ts  role-stack.ts
cdk/test/: nitro_enclaves_acm_streamline.test.ts
docs/: cdk-usage.md  httpd.md  java_keystore.md
env/eif/: Dockerfile
env/enclave/: Dockerfile
env/parent/: Dockerfile  index.html  nginx.conf  setup.sh
env/parent/hello/: Dockerfile
scripts/: evault-env.sh
scripts/init/unix/: start.sh
scripts/init/vsock/: start.sh
src/: lib.rs  pkcs11.rs
src/api/: mod.rs  object.rs  session.rs  sign.rs  token.rs
src/backend/: device.rs  mech.rs  mod.rs  session.rs  token.rs
src/backend/db/: object.rs
src/crypto/: decrypt.rs  digest.rs  encrypt.rs  ffi.rs  key.rs  mod.rs  sign.rs  verify.rs
src/nsm-driver/: Cargo.toml  NOTICE
src/nsm-driver/src/: lib.rs
src/nsm-io/: Cargo.toml  NOTICE
src/nsm-io/src/: lib.rs
src/nsm-lib/: Cargo.toml  NOTICE  build.rs  cbindgen.toml  nsm-lib.h
src/nsm-lib/src/: lib.rs
src/util/: ckraw.rs  logger.rs
src/vtok_agent/: Cargo.toml
src/vtok_agent/service/: acm-httpd.example.yaml  acm.example.yaml  nitro-enclaves-acm.service
src/vtok_agent/src/: config.rs  enclave.rs  imds.rs  logger.rs  main.rs  ne.rs  util.rs
src/vtok_agent/src/agent/: httpd.rs  mngtok.rs  mod.rs  nginx.rs
src/vtok_common/: Cargo.toml
src/vtok_common/src/: config.rs  lib.rs
src/vtok_common/src/util/: flock.rs  mod.rs  time.rs
src/vtok_init/: Cargo.toml
src/vtok_init/src/: main.rs
src/vtok_p11/: Cargo.toml  build.rs
src/vtok_p11/src/: lib.rs  pkcs11.rs
src/vtok_p11/src/api/: decrypt.rs  digest.rs  encrypt.rs  mod.rs  nyi.rs  object.rs  session.rs  sign.rs  token.rs  verify.rs
src/vtok_p11/src/backend/: device.rs  mech.rs  mod.rs  session.rs  slot.rs  token.rs
src/vtok_p11/src/backend/db/: mod.rs  object.rs
src/vtok_p11/src/crypto/: cert.rs  decrypt.rs  digest.rs  encrypt.rs  ffi.rs  key.rs  mod.rs  sign.rs  verify.rs
src/vtok_p11/src/util/: ckraw.rs  logger.rs  mod.rs
src/vtok_rand/: Cargo.toml  build.rs
src/vtok_rand/src/: ffi.rs  main.rs
src/vtok_rpc/: Cargo.toml
src/vtok_rpc/src/: api.rs  lib.rs  proto.rs  transport.rs
src/vtok_srv/: Cargo.toml  build.rs
src/vtok_srv/src/: main.rs  worker.rs
src/vtok_srv/src/aws_ne/: ffi.rs  mod.rs
src/vtok_tool/: Cargo.toml
src/vtok_tool/src/: main.rs
streamline/: README.md  cdk.json  package-lock.json  package.json
streamline/docs/: cdk-usage.md
streamline/src/assets/user-data-scripts/AL2023/: apache-conf.sh  nginx-conf.sh
streamline/src/config/: config-validator.ts  default-config.ts  types.ts
streamline/src/lib/: certificate-stack.ts  instance-stack.ts  role-stack.ts
tests/: ci  testtool
tests/certs/: invalid_chain_cert.pem  noroot_chain_cert.pem  noroot_chain_key.pem  selfsigned_cert.pem  selfsigned_key.pem  valid_chain_cert.pem  valid_chain_key.pem
tests/helpers/: Cargo.toml
tests/helpers/src/: main.rs
tests/keys/: prime256v1_privatekey.pem  prime256v1_publickey.pem  rsa1024_privatekey.pem  rsa1024_publickey.pem  rsa2048_privatekey.pem  rsa2048_publickey.pem  rsa4096_privatekey.pem  rsa4096_publickey.pem  rsa8192_privatekey.pem  rsa8192_publickey.pem  secp224r1_privatekey.pem  secp224r1_publickey.pem  secp384r1_privatekey.pem  secp384r1_publickey.pem  secp521r1_privatekey.pem  secp521r1_publickey.pem
tools/: README.md  devtool  evault-db  evault-env.sh  nitro-evault  p11ne-cli  p11ne-db  s3-db  setup-tool
tools/devctr/: Dockerfile  nginx-cert.pem  nginx.conf
tools/enclave/: Dockerfile  start.sh  start_unix.sh
