[workspace]
members = [ "src/vtok_p11", "src/vtok_rpc", "src/vtok_srv", "src/vtok_tool", "tests/helpers", "src/nsm-driver", "src/nsm-io", "src/nsm-lib" ]
default-members = ["src/vtok_p11", "src/vtok_rpc", "src/vtok_srv", "src/vtok_tool", "src/nsm-driver", "src/nsm-io", "src/nsm-lib" ]

[profile.release]
lto = true
