[package]
name = "nsm-driver"
version = "0.1.0"
authors = ["Petre Eftime <epetre@amazon.com>", "Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15"
libc = "0.2"
log = "0.4"
serde_cbor = "0.10"
nsm-io = { path = "../nsm-io" }
