[package]
name = "nsm-io"
version = "0.1.0"
authors = ["Petre Eftime <epetre@amazon.com>", "Anthony Liguori <aliguori@amazon.com>", "Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
libc = "0.2"
log = "0.4"
nix = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.10"
