# Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vtok_common"
version = "0.1.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
