[package]
name = "vtok_p11"
version = "0.1.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
description = "Nitro vToken pkcs#11 library"

[lib]
name = "vtok_p11"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
vtok_common = { path = "../vtok_common" }

[dependencies.log]
version = "0.4.18"
features = ["std"]
