[package]
name = "vtok_rpc"
version = "0.1.0"
authors = ["Dan Horobeanu <dhr@amazon.com>"]
edition = "2018"
description = "Nitro vToken RPC helpers"

[dependencies]
libc = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
vtok_common = { path = "../vtok_common" }

[lib]
name = "vtok_rpc"
path = "src/lib.rs"
