[package]
name = "vtok_srv"
version = "0.1.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
description = "Nitro vToken provisioning server"

[dependencies]
libc = "0.2"
base64 = "0.21"
vtok_common = { path = "../vtok_common" }
vtok_rpc = { path = "../vtok_rpc" }

[[bin]]
name = "p11ne-server"
path = "src/main.rs"
