[package]
name = "vtok_tool"
version = "0.1.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
description = "Nitro vToken Tool"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
vtok_rpc = { path = "../vtok_rpc" }

[[bin]]
name = "p11ne-client"
path = "src/main.rs"
